# fuck-rust-crate

./: README.md
actix/hello-actor/: .gitignore  Cargo.toml
actix/hello-actor/src/: main.rs
actix/hello-world/: Cargo.toml
actix/hello-world/src/: main.rs
axum/hello-world/: Cargo.toml  test.rest
axum/hello-world/src/: main.rs
bitcoin/bitcoin-demo/: Cargo.toml
bitcoin/bitcoin-demo/data/wallets/: db  snap.00000000000000FD
bitcoin/bitcoin-demo/src/: block.rs  blockchain.rs  cli.rs  main.rs  server.rs  transaction.rs  utxoset.rs  wallets.rs
bitcoin/bitcoin-rust-example/: Cargo.toml
bitcoin/bitcoin-rust-example/src/: account.rs  crypto.rs  hash.rs  lib.rs  signature.rs  transaction.rs
bitcoin/blockchain-rust/: .gitignore  Cargo.toml
bitcoin/blockchain-rust/src/: block.rs  blockchain.rs  config.rs  lib.rs  main.rs  node.rs  proof_of_work.rs  server.rs  transaction.rs  utils.rs  utxo_set.rs  wallet.rs  wallets.rs
cheatsheet/hello-world/: Cargo.toml
cheatsheet/hello_macro/: Cargo.toml
cheatsheet/hello_macro/hello_macro_derive/: Cargo.toml
cheatsheet/hello_macro/hello_macro_derive/src/: lib.rs
cheatsheet/hello_macro/src/: lib.rs  main.rs
cheatsheet/programming-rust/: Cargo.toml
cheatsheet/programming-rust/src/: lib.rs
cheatsheet/programming-rust/src/chapter_03/: mod.rs
cheatsheet/programming-rust/src/chapter_04/: mod.rs  raw_ptr.rs  stack.rs
cheatsheet/programming-rust/src/chapter_05/: ch05.md  learn_borrow.rs  learn_cell.rs  learn_iter.rs  learn_object_trait.rs  learn_pin.rs  learn_send_sync.rs  learn_sized.rs  learn_static.rs  mod.rs  pin_to_stack.rs
cheatsheet/programming-rust/src/chapter_06/: mod.rs
cheatsheet/programming-rust/src/chapter_19/: mod.rs
cheatsheet/programming-rust/src/chapter_21/: hello_micro.rs  mod.rs
concurrency/: Cargo.toml
concurrency/_01_thread/: Cargo.toml
concurrency/_01_thread/src/: thread.rs
concurrency/_03_async_await/: Cargo.toml
concurrency/_03_async_await/src/: async_example.rs  lib.rs  tokio_example.rs
concurrency/_04_synchronization_primitives/: Cargo.toml
concurrency/_04_synchronization_primitives/src/: cell.rs  cow.rs  lib.rs  rc.rs
concurrency/_05_basic_concurrency_primitives/: Cargo.toml
concurrency/_05_basic_concurrency_primitives/src/: arc.rs  lib.rs  mutex.rs
criterion/hello-bench/: Cargo.toml
criterion/hello-bench/benches/: my_benchmark.rs
criterion/hello-bench/src/: lib.rs
data_structure/lists/src/: box.rs  first.rs  lib.rs  zero.rs
ethereum/alloy-examples/: Cargo.toml
hyper/restful-demo/: Cargo.toml
hyper/restful-demo/src/: main.rs
libp2p/chat/: .gitignore  Cargo.toml
libp2p/chat/src/: main.rs
micro-service/hello-axum/: Cargo.toml
micro-service/hello-axum/src/: main.rs
micro-service/hello-axum/tests/: serde_test.rs
micro-service/hello-world/: Cargo.toml
micro-service/hello-world/proto/: hello.proto
micro-service/hello-world/src/pb/: hello.rs
r-nacos/r-nacos-examples/: .gitignore  Cargo.toml
r-nacos/r-nacos-examples/src/: cli.rs  lib.rs
r-nacos/r-nacos-examples/src/common/: mod.rs  protobuf_utils.rs  rusqlite_utils.rs  string_utils.rs
r-nacos/r-nacos-examples/src/common/pb/: mod.rs  transfer.proto  transfer.rs
r-nacos/r-nacos-examples/src/transfer/: data_to_sqlite.rs  mod.rs  model.rs  reader.rs
r-nacos/r-nacos-examples/src/transfer/sqlite/: mod.rs
r-nacos/r-nacos-examples/src/transfer/sqlite/dao/: config.rs  config_history.rs  mod.rs  tenant.rs  user.rs
raft/openraft-demo/raft-kv-rocksdb/: Cargo.toml  README.md
raft/openraft-demo/raft-kv-rocksdb/src/: lib.rs  store.rs
raft/raft-rs-demo/: Cargo.toml
raft/raft-rs-demo/src/: main.rs
tokio/chat-server/: Cargo.toml
tokio/chat-server/examples/: server-01.rs  server-02.rs
tokio/hello-world/: Cargo.toml
tokio/tokio-actor/: .gitignore  Cargo.toml
tokio/tokio-actor/src/: main.rs
tokio/tutorial-code/channels/: Cargo.toml  README.md
tokio/tutorial-code/channels/src/: main.rs
tokio/tutorial-code/hello-tokio/: Cargo.toml  README.md
tokio/tutorial-code/hello-tokio/src/: main.rs
tokio/tutorial-code/io/: .gitignore  Cargo.toml
tokio/tutorial-code/io/src/: lib.rs  main.rs
tokio/tutorial-code/mini-tokio/: Cargo.toml
tokio/tutorial-code/mini-tokio/src/: delay.rs  lib.rs  main.rs  main_future.rs  mini_tokio.rs  runtime.rs
tokio/tutorial-code/shared-state/: Cargo.toml  README.md
tokio/tutorial-code/shared-state/src/: main.rs
tokio/tutorial-code/spawning/: Cargo.toml  README.md
tokio/tutorial-code/spawning/src/: main.rs
tonic/hello-world/: Cargo.toml  build.rs
tonic/hello-world/proto/: hello_world.proto
tonic/hello-world/src/: client.rs  server.rs
tonic/hello-world/src/pb/: hello.rs
wasm/calculator/: .gitignore  Cargo.toml  build.sh  index.html
wasm/calculator/src/: lib.rs
wasm/dioxus-live/: .gitignore  Cargo.toml  index.html
wasm/dioxus-live/src/: main.rs
wasm/wasm-demo/: .gitignore  Cargo.toml  index.html  server.js
wasm/wasm-demo/src/: lib.rs
wasm/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm/webcam-live/: .gitignore  Cargo.toml  Trunk.toml  index.html
wasm/webcam-live/src/: main.rs
