[package]
name = "bitcoin-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
bs58 = "0.5.0"
ripemd = "0.1.3"
hex = "0.4.3"
sha256 = { version = "1.5.0" }
secp256k1 = "0.29.0"
serde = { version = "1.0.204", features = ["derive"] }
