[package]
name = "alloy-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.1", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",

] }


foundry-fork-db = "0.12"
revm-primitives = "15.0"
revm = "19.0"

tokio = "1.42"
eyre = "0.6"
futures-util = "0.3"

serde = "1.0"
serde_json = "1.0"


alloy-primitives = "0.1"      # 提供地址等基本类型
alloy-signer = "0.1"          # 提供 Signer trait
alloy-signer-local = "0.1"    # 提供 LocalWallet 结构体
secp256k1 = "0.20"            # 用于公钥派生
hex = "0.4"                   # 用于字节转十六进制字符串