[package]
name = "alloy-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.1", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",

] }


foundry-fork-db = "0.12"
revm-primitives = "15.0"
revm = "19.0"

tokio = "1.42"
eyre = "0.6"
futures-util = "0.3"

serde = "1.0"
serde_json = "1.0"



alloy-primitives = "0.1"
alloy-signer = "0.1"
k256 = "0.13"
rand = "0.8"
hex = "0.4.3"# 用于字节转十六进制字符串