[package]
name = "r-nacos-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-http = "3"
actix = "0.13"
actix-rt = "2"
actix-multipart = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
clap = {version = "4.5", features = ["derive"]}
lazy_static = "1.4"

dotenv = "0.15"

log = "0.4"
env_logger = "0.11"
env_logger_timezone_fmt = "0.1.1"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"

anyhow = "1"
quick-protobuf = "0.8.1"
rusqlite = {version = "0.25", features = ["bundled"]}
rsql_builder = "0.1.5"

prost = "0.7"
prost-derive = "0.7"
prost-types = "0.7"